Kubernetes/k8s-manifests-v4/clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-clusterip
  namespace: day33
spec:
  type: ClusterIP
  selector:
    app: nginx-net-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
