Kubernetes/k8s-manifests-v4/loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-loadbalancer
  namespace: day33
spec:
  type: LoadBalancer
  selector:
    app: nginx-net-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
